posts can now be created

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -7,7 +7,7 @@
   </div>
   <div>
     <label for="author">Author:</label>
-    <input type="text" name="author" id="author" value="{{currentUser.username}}" readonly>
+    <input type="text" name="author" id="author" value="{{username}}" readonly>
   </div>
   <div>
     <label for="body">Body:</label>
@@ -25,3 +25,5 @@
     </div>
   {{/each}}
 {{/each}}
+
+<script src="/js/blog.js"></script>
