--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Registry</title>
+  <title>Tech Blog Posts</title>
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
   <header class="display-flex justify-space-between align-center p-2">
     <h1>
-      User Registry
+      Tech Blog Posts
     </h1>
     {{#if logged_in}}
     <nav>
